<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BikeBuddies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">BikeBuddies Home</string>
    <string name="title_activity_ride_screen">Record a Ride</string>
    <string name="title_activity_find_friends">Find Friends!</string>
    <string name="title_activity_leaderboard_screen">Class Leaderboard</string>
    <string name="title_activity_notifications_screen">Notifications</string>
    <string name="title_splash_screen">Bike Buddies</string>
    <string name="THIS_USER">Hannah</string>
    <string name="welcome_user">Welcome, Hannah!</string>

    <!-- strings for use in the main screen-->
    <string name="start_ride_button_text">Start Ride!</string>
    <string name="history_button_text">My History</string>
    <string name="leaderboard_button_text">My Class</string>
    <string name="find_friends_button_text">Find Friends!</string>
    <string name="notify_button_text">Notifications</string>

    <!-- strings for use in the class leaderboard-->
    <string name="leaderboard_data_bar_student">Student</string>
    <string name="leaderboard_data_bar_time">Total Time</string>
    <string name="leaderboard_data_bar_mileage">Mileage</string>
    <string name="leaderboard_title_bar">Class Leaderboard</string>


    <string-array name="peoplearray">
        <item >Jim B.</item>
        <item >James B.</item>
        <item >Vanessa R</item>
        <item >George S.</item>
        <item >Hannah</item>
    </string-array>

    <string-array name="timemileagearray">
        <item >04:05:10 \u0020\u0020\u00207.5mi</item>
        <item >03:04:12 \u0020\u0020\u00202.2mi</item>
        <item >03:01:01 \u0020\u0020\u00202.1mi</item>
        <item >02:34:19 \u0020\u0020\u00201.8mi</item>
        <item >00:00:00 \u0020\u0020\u00200.0mi</item>
    </string-array>
    <integer name="google_play_services_version">7095000</integer>
    <string name="end_ride_string">End Ride</string>
    <string name="current_time_string">Current Time</string>
    <string name="current_distance_string">Current Distance</string>
    <string name="initial_time_string">00:00:00</string>
    <string name="initial_distance_string">0.0</string>
    <string name="finish_message">Congratulations on your \n awesome ride!</string>
    <string name="cancel_message">Are you sure you want to \n cancel this ride?\n Stats will not be saved!</string>
    <string name="total_time">Total Time:\  </string>
    <string name="total_distance">Total Distance:\  </string>


    <!--FindFriends-->
    <string name="invite">Invite to Ride!</string>
    <string name="friend1">Jim B.</string>
    <string name="friend2">George</string>
    <string name="friend3">James B.</string>
    <string name="friend4">Sam E.</string>

    <!--SetDateTime-->
    <string name="title_activity_set_date_time">Set When Is Good for You </string>
    <string name="set_date">Choose the Date</string>
    <string name="set_time">Choose the Time</string>
    <string name="where">Where will you meet?</string>
    <string name="send_invite">Invite your friend!</string>

    <!--Status alert dialog-->
    <string name="alert_message">Send invite to your friend?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Invite sent dialog-->
    <string name="confirm">Your invitation has been sent!</string>
    <string name="ok">OK</string>
    <string name="title_activity_my_ride_history">My Ride History</string>
    <string name="title_activity_activity_find_friends">activity_find_friends</string>

</resources>
