<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.androidsgv.bikebuddies.SetDateTime">


    <Button
        android:id="@+id/setDate"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:textAllCaps="false"
        android:background="@drawable/button_background_lightblue"
        android:onClick="showDatePickerDialog"
        android:layout_margin="20sp"
        android:layout_width="fill_parent">
    </Button>


    <Button
        android:id="@+id/setTime"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:textAllCaps="false"
        android:background="@drawable/button_background_midblue"
        android:onClick="showTimePickerDialog"
        android:layout_margin="20sp"
        android:layout_width="fill_parent">
    </Button>

    <TextView
        android:id="@+id/chosenDate"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text=" "/>

    <TextView
        android:id="@+id/chosenTime"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text=" "/>

    <EditText
        android:id="@+id/EditTextFeedbackBody"
        android:layout_height="wrap_content"
        android:hint="@string/where"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:singleLine="true"
        android:imeOptions="actionDone">
    </EditText>



    <Button
        android:id="@+id/SendInvite"
        android:layout_height="wrap_content"
        android:text="@string/send_invite"
        android:background="@drawable/button_background_darkblue"
        android:layout_width="fill_parent"
        android:layout_margin="20sp"
        android:onClick="yesNoAlert">
    </Button>

</LinearLayout>
