<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#FFFFFF"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainScreen"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/profile_image_hdpi"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:paddingLeft="17dp"/>

    <Button
        android:layout_width="160sp"
        android:layout_height="70sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/buttonName"
        android:text="@string/notify_button_text"
        android:textStyle="bold"
        android:background="@drawable/button_background_lightblue"
        android:gravity="center"
        android:onClick="seeNotifications"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"/>

    <ImageButton
        android:layout_width="160sp"
        android:layout_height="120sp"
        android:text="@string/find_friends_button_text"
        android:textColor="#FFFFFF"
        android:id="@+id/findfriendsButton"
        android:onClick="findFriends"
        android:textAllCaps="false"
        android:background="@drawable/button_background_friends"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="160sp"
        android:layout_height="120sp"
        android:text="@string/history_button_text"
        android:id="@+id/history_button"
        android:textAllCaps="false"
        android:background="@drawable/button_background_history"
        android:onClick="openMyHistory"
        android:layout_alignTop="@+id/leaderboardButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton android:text="@string/start_ride_button_text"
        android:layout_height="120sp"
        android:layout_width="160sp"
        android:id="@+id/startRideButton"
        android:onClick="startRide"
        android:textAllCaps="false"
        android:background="@drawable/button_background_startride"
        android:layout_alignTop="@+id/findfriendsButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton android:text="@string/leaderboard_button_text"
        android:layout_height="120sp"
        android:layout_width="160sp"
        android:id="@+id/leaderboardButton"
        android:onClick="goToLeaderboard"
        android:textAllCaps="false"
        android:background="@drawable/button_background_class"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />




</RelativeLayout>
