<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidsgv.bikebuddies.RideScreen"
    android:id="@+id/top_layout">

    <fragment class="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_ride_string"
        android:background="#ffff0000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/ride_screen_margin"
        android:padding="@dimen/ride_screen_margin"
        android:onClick="endRide"
        android:textSize="@dimen/ride_screen_large_text"/>

    <LinearLayout
        android:layout_width="@dimen/ride_screen_panel_width"
        android:layout_height="@dimen/ride_screen_panel_height"
        android:layout_alignParentBottom="true"
        android:id="@+id/timer"
        android:orientation="vertical"
        android:background="@drawable/border_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_time_string"
            android:textSize="@dimen/ride_screen_small_text"
            android:layout_marginTop="@dimen/ride_screen_margin"/>
        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format="%s"
            android:textSize="@dimen/ride_screen_large_text"
            android:id="@+id/total_time_text"
            android:layout_gravity="center_horizontal"/>
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/initial_time_string"
            android:textSize="@dimen/ride_screen_large_text"
            android:layout_marginTop="@dimen/ride_screen_margin"
            android:id="@+id/total_time_text"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/ride_screen_panel_width"
        android:layout_height="@dimen/ride_screen_panel_height"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/timer"
        android:layout_toEndOf="@+id/timer"
        android:orientation="vertical"
        android:background="@drawable/border_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_distance_string"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/ride_screen_small_text"
            android:layout_marginTop="@dimen/ride_screen_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_distance_string"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/ride_screen_large_text"
            android:layout_marginTop="@dimen/ride_screen_margin"
            android:id="@+id/total_distance_text"/>


    </LinearLayout>




</RelativeLayout>
