<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.androidsgv.bikebuddies.FindFriends">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_margin="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/friend1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/friend1"
                android:textSize="10pt"
                android:padding="5sp">
            </TextView>

            <Button
                android:id="@+id/friend1Button"
                android:layout_height="wrap_content"
                android:text="@string/invite"
                android:onClick="setDateTime"
                android:layout_width="fill_parent"
                android:padding="5sp"
                android:background="@drawable/button_background_lightblue">
            </Button>


        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/friend2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/friend2"
                android:textSize="10pt"
                android:padding="5sp">
            </TextView>

            <Button
                android:id="@+id/friend2Button"
                android:layout_height="wrap_content"
                android:text="@string/invite"
                android:onClick="setDateTime"
                android:layout_width="fill_parent"
                android:padding="5sp"
                android:background="@drawable/button_background_lightblue">
            </Button>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/friend3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/friend3"
                android:textSize="10pt"
                android:padding="5sp">
            </TextView>

            <Button
                android:id="@+id/friend3Button"
                android:layout_height="wrap_content"
                android:text="@string/invite"
                android:onClick="setDateTime"
                android:padding="5sp"
                android:background="@drawable/button_background_lightblue">
            </Button>

        </TableRow>


    </TableLayout>

</RelativeLayout>
